# LargeFileEditor

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  clang-format  gen_file.py  generate_coverage_report.sh  generate_test_file.sh  verify_pt.py
.github/workflows/: ci.yml
docs/dev/: commit-tags.md  dev-commands.md
include/backend/: HistoryManager.h  KmpSearch.h  MemoryMappedFile.h  Piece.h  PieceTable.h
include/gui/: BackgroundTaskManager.h  CursorManager.h  EditorController.h  FindReplaceDialog.h  FontDialog.h  LargeFileViewer.h  LineManager.h  MainWindow.h  TextRenderer.h
include/util/: FileUtils.h  Utf8Utils.h
src/: Main.cc
src/backend/: HistoryManager.cc  KmpSearch.cc  MemoryMappedFile.cc  PieceTable.cc
src/gui/: BackgroundTaskManager.cc  CursorManager.cc  EditorController.cc  FindReplaceDialog.cc  FontDialog.cc  LargeFileViewer.cc  LineManager.cc  MainWindow.cc  TextRenderer.cc
src/util/: FileUtils.cc  Utf8Utils.cc
tests/: CMakeLists.txt
tests/backend/: HistoryManagerTest.cc  KmpSearchTest.cc  MemoryMappedFileTest.cc  PieceTableTest.cc
tests/gui/: CursorManagerTest.cc  EditorControllerTest.cc  LineManagerTest.cc  QtTestApp.h
tests/util/: FileUtilsTest.cc  Utf8UtilsTest.cc
